refactor: Add query methods for sub-category retrieval and category-based transaction counting, update CategoryDto with mapping utilities, and improve consistency in CategoryService operations